Next: Choose Font

--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
+<!--
+    Finish one section at a time: html to scss
+-->
 
 <body>
-    <div id="section-opening"></div>
+    <div id="section-opening">
+        <div class="image-overlay">
+            <div class="top">
+                <div class="logo">
+                </div>
+                <div class="button">
+                </div>
+            </div>
+            <div class="bottom"></div>
+        </div>
+    </div>
     <div id="section-time"></div>
     <div id="section-steps"></div>
     <div id="section-presenters"></div>
