--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         <div class="image-overlay">
             <div class="top">
                 <div class="logo">
+                    <img src="images/logo.png">
                 </div>
                 <div class="button">
+                    <a href="#">Sign up</a>
                 </div>
             </div>
             <div class="bottom"></div>
