--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Event Landing Page</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+        integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <!--
@@ -22,16 +25,178 @@
                     <a href="#">Sign up</a>
                 </div>
             </div>
-            <div class="bottom"></div>
+            <div class="bottom">
+                <h1>encrypt</h1>
+                <h3>Hackathon</h3>
+                <h4>Coding today for a better tomorrow.</h4>
+                <h5>How we use technology each day is what defines history. This summer, for just 24 hours,<br> coders
+                    and designers of the world unite to reimagine the future.</h5>
+                <i class="fas fa-chevron-down"></i>
+            </div>
         </div>
     </div>
-    <div id="section-time"></div>
-    <div id="section-steps"></div>
-    <div id="section-presenters"></div>
-    <div id="section-quote"></div>
-    <div id="section-schedule"></div>
-    <div id="section-ending"></div>
-    <div id="section-copyright"></div>
+    <div id="section-time">
+        <div class="sentence-holder">
+            <span>Sign up today, the event starts in:</span>
+        </div>
+        <div class="time-container">
+            <div class="days">
+                <div class="top">
+                    <h1>0</h1>
+                </div>
+                <div class="bottom">
+                    <h5>Days</h5>
+                </div>
+            </div>
+            <div class="hours">
+                <div class="top">
+                    <h1>0</h1>
+                </div>
+                <div class="bottom">
+                    <h5>Hours</h5>
+                </div>
+            </div>
+            <div class="minutes">
+                <div class="top">
+                    <h1>0</h1>
+                </div>
+                <div class="bottom">
+                    <h5>Minutes</h5>
+                </div>
+            </div>
+            <div class="seconds">
+                <div class="top">
+                    <h1>0</h1>
+                </div>
+                <div class="bottom">
+                    <h5>Seconds</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="section-steps">
+        <div class="sentence-holder">
+            <span>Here's how it works</span>
+        </div>
+        <div class="steps-container">
+            <div class="num">
+                <h1>1</h1>
+            </div>
+            <div class="one">
+                <div class="top">
+                    <h1>Submit your email</h1>
+                </div>
+                <div class="bottom">
+                    <h5>We'll send you instructions on how to apply to get involved.</h5>
+                </div>
+            </div>
+            <div class="num">
+                <h1>2</h1>
+            </div>
+            <div class="two">
+                <div class="top">
+                    <h1>Application Review</h1>
+                </div>
+                <div class="bottom">
+                    <h5>Once our panel has reviewed and approved your applicatoin, we'll send you a formal invite.</h5>
+                </div>
+            </div>
+            <div class="num">
+                <h1>3</h1>
+            </div>
+            <div class="three">
+                <div class="top">
+                    <h1>Get your tickets</h1>
+                </div>
+                <div class="bottom">
+                    <h5>Get tickets for yourself and invite friends and family to be your guests.</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="section-presenters">
+        <div class="sentence-holder">
+            <span>Meet the presenters</span>
+        </div>
+        <div class="items-container">
+            <div class="item">
+                <div>
+                    <img src="images/face.jpg">
+                </div>
+                <h3 class="name">Andrew Clark</h3>
+                <h3 class="role">Senior Developer at Broink</h3>
+            </div>
+            <div class="item">
+                <div>
+                    <img src="images/face1.jpg">
+                </div>
+                <h3 class="name">Andrew Clark</h3>
+                <h3 class="role">Senior Developer at Broink</h3>
+            </div>
+            <div class="item">
+                <div>
+                    <img src="images/face2.jpg">
+                </div>
+                <h3 class="name">Andrew Clark</h3>
+                <h3 class="role">Senior Developer at Broink</h3>
+            </div>
+            <div class="item">
+                <div>
+                    <img src="images/face3.jpg">
+                </div>
+                <h3 class="name">Andrew Clark</h3>
+                <h3 class="role">Senior Developer at Broink</h3>
+            </div>
+        </div>
+    </div>
+    <div id="section-quote">
+        <div class="image-overlay">
+            <div class="quote-container">
+                <h1>
+                    "I have no doubt that many of the concepts<br>
+                    developed at Encrypt would have the power to<br>
+                    change the world."
+                </h1>
+                <h3>Jacob Marosa<br>2020 Finalist</h3>
+            </div>
+        </div>
+    </div>
+    <div id="section-schedule">
+        <div class="h1-container">
+            <h1>Event Schedule</h1>
+        </div>
+        <div class="item1">
+            <h3>9:30 AM</h3>
+            <div class="a">Registration</div>
+            <div class="b">Digital registration begins at 9am, and ends at 11am.</div>
+        </div>
+        <div class="item2">
+            <h3>10:30 AM</h3>
+            <div class="a">Kick off and Orientation</div>
+            <div class="b">Host Andrew Clark sets the stage for the event. Meet your team, and get pumped.</div>
+        </div>
+        <div class="item3">
+            <h3>11:30 AM</h3>
+            <div class="a">Let the Games Begin!</div>
+            <div class="b">24 hours of coding and inspirational presentations.</div>
+        </div>
+        <div class="item4">
+            <h3>12:30 PM</h3>
+            <div class="a">Closing Ceremonies</div>
+            <div class="b">Present your amazing projects, and enjoy the big show.</div>
+        </div>
+    </div>
+    <div id="section-ending">
+        <div class="image-overlay">
+            <div>Ready to code the future?</div>
+            <div class="button">
+                <a href="#">Sign up</a>
+            </div>
+        </div>
+    </div>
+    <div id="section-copyright">
+        <h3>2020 Encrypt Hackaton. All rights reserved. Privacy Policy</h3>
+    </div>
 </body>
 
 </html>
